# image-pixelator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  gui_pixelator.py  image_pixelator.py  pyproject.toml
.github/workflows/: tests.yml
